update to pagination list chatroom
